; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_seaf_repo_manager_create_new_repo.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_seaf_repo_manager_create_new_repo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @seaf_repo_manager_create_new_repo(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = call i8* (...) @gen_uuid()
  store i8* %10, i8** %9, align 8
  %11 = load i8*, i8** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i32* @seaf_repo_new(i8* %11, i8* %12, i8* %13)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %3
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @g_free(i8* %18)
  store i32* null, i32** %4, align 8
  br label %27

20:                                               ; preds = %3
  %21 = load i8*, i8** %9, align 8
  %22 = call i32 @g_free(i8* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @seaf_repo_manager_add_repo(i32* %23, i32* %24)
  %26 = load i32*, i32** %8, align 8
  store i32* %26, i32** %4, align 8
  br label %27

27:                                               ; preds = %20, %17
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i8* @gen_uuid(...) #1

declare dso_local i32* @seaf_repo_new(i8*, i8*, i8*) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i32 @seaf_repo_manager_add_repo(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
